[package]
name = "icp_2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
kdtree = "0.7.0"


[dev-dependencies]
criterion = "0.5.1"
plotters = {version = "0.3.5", default-features = false, features = ["svg_backend"]}



[[bench]]
name="my_benchmark"
harness = false
